# translify.app

./: .env.example  .gitignore  DEPLOY.md  DESIGN.md  PRODUCT.md  README.md  TASKS.md  UX-AUDIT.md  docker-compose.yml  seo-media.md
apps/api/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  pyproject.toml
apps/api/alembic/: env.py
apps/api/alembic/versions/: 20260502_0000_initial_schema.py  20260503_0001_billing.py  20260507_0002_pages_quota.py  20260510_0004_highlights.py  20260511_0005_highlight_position_cfi.py  20260511_0006_book_summary.py  20260511_0007_gardens.py  20260511_0008_user_family_safe_mode.py  20260511_0009_reader_profiles.py  20260513_0010_google_oauth_accounts.py  20260513_0011_onboarding_leads.py  20260513_0012_book_is_seed.py  20260513_0013_seed_clone_per_user.py  20260513_0014_folders.py  20260513_0015_users_is_anonymous.py  20260514_0016_book_progress.py  20260527_0017_social_layer.py  20260624_0018_media_youtube.py  20260624_0019_study_guides.py  20260624_0020_workspace_shares.py
apps/api/app/: book_access.py  config.py  db.py  main.py  storage.py  upload_session.py
apps/api/app/auth/: gate.py  magic_link.py  models.py  rate_limit.py  schemas.py  users.py
apps/api/app/billing/: __init__.py  active_profile.py  family_safe.py  plans.py  quota.py  service.py
apps/api/app/emails/: __init__.py  client.py  templates.py
apps/api/app/ingest/: __init__.py  chunker.py  embeddings.py  language.py  media_pipeline.py  parsers.py  pipeline.py  transcription.py
apps/api/app/models/: __init__.py  book.py  chat.py  chunk.py  folder.py  garden.py  highlight.py  onboarding.py  profile.py  progress.py  quiz.py  social.py  study_guide.py  (+3 more)
(+343 files in other folders)
