[project]
name = "translify-api"
version = "0.1.0"
description = "Translify backend API"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.6.0",
    "sqlalchemy[asyncio]>=2.0.36",
    "asyncpg>=0.30.0",
    "alembic>=1.14.0",
    "pgvector>=0.3.6",
    "fastapi-users[sqlalchemy]>=14.0.0",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "boto3>=1.35.0",
    "rq>=2.0.0",
    "redis>=5.2.0",
    "httpx>=0.28.0",
    "anthropic>=0.40.0",
    "sentence-transformers>=3.3.0",
    "deepl>=1.20.0",
    "pypdf>=5.1.0",
    "pdfplumber>=0.11.0",
    "pymupdf>=1.24.0",
    "ebooklib>=0.18",
    "beautifulsoup4>=4.12.0",
    "lxml>=5.0.0",
    "tiktoken>=0.8.0",
    "python-multipart>=0.0.18",
    "langdetect>=1.0.9",
    "pymupdf-fonts>=1.0.5",
    "arabic-reshaper>=3.0.1",
    "python-bidi>=0.6.7",
    "stripe>=10.12.0",
    "resend>=2.4.0",
]

[dependency-groups]
dev = [
    "ruff>=0.8.0",
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-httpx>=0.34.0",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N", "SIM"]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.uv]
package = false

# Pin torch to the CPU-only wheel index — we run inference on CPU and don't
# want ~2GB of NVIDIA CUDA libs in the image.
[tool.uv.sources]
torch = { index = "pytorch-cpu" }

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true
